fix 64x32 skins hitbox for persistent models