@@ -7,8 +7,8 @@ import de.tomalbrc.bil.core.holder.wrapper.Locator;
 import de.tomalbrc.bil.core.model.Model;
 import de.tomalbrc.danse.poly.PlayerPartHolder;
 import de.tomalbrc.danse.registries.PlayerModelRegistry;
-import de.tomalbrc.danse.util.CustomModelDataCache;
 import de.tomalbrc.danse.util.MinecraftSkinParser;
+import de.tomalbrc.danse.util.TextureCache;
 import de.tomalbrc.danse.util.Util;
 import eu.pb4.polymer.virtualentity.api.attachment.EntityAttachment;
 import eu.pb4.polymer.virtualentity.api.elements.ItemDisplayElement;
@@ -17,6 +17,7 @@ import net.minecraft.network.syncher.SynchedEntityData;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.util.StringUtil;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
@@ -25,7 +26,6 @@ import net.minecraft.world.item.ItemDisplayContext;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.SkullBlockEntity;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.Map;
@@ -34,10 +34,10 @@ public class PlayerModelEntity extends Entity implements AnimatedEntity {
     public static final ResourceLocation ID = Util.id("player_model");
     private static final String ANIMATION = "Animation";
     private static final String PLAYER = "Player";
-    private PlayerPartHolder<?> holder;
+    protected PlayerPartHolder<?> holder;
 
-    @NotNull
-    private String animation = "walk";
+    @Nullable
+    private String animation = null;
     @Nullable
     private String playerName;
 
@@ -52,6 +52,7 @@ public class PlayerModelEntity extends Entity implements AnimatedEntity {
 
     public void setModel(Model model) {
         this.holder = new PlayerPartHolder<>(this, model);
+        this.holder.setupHitbox();
         EntityAttachment.ofTicking(this.holder, this);
     }
 
@@ -62,39 +63,55 @@ public class PlayerModelEntity extends Entity implements AnimatedEntity {
                 this.holder.destroy();
             }
 
+            if (this.animation != null && !this.animation.isBlank() && this.holder != null) {
+                this.holder.getAnimator().stopAnimation(this.animation);
+            }
+
             this.animation = tag.getString(ANIMATION).orElseThrow();
 
-            this.setModel(PlayerModelRegistry.getModel(this.animation));
-
-            this.holder.getAnimator().playAnimation(this.animation);
+            if (!this.animation.isBlank()) {
+                var model = PlayerModelRegistry.getModel(this.animation);
+                if (model != null && model.animations().containsKey(this.animation)) {
+                    this.setModel(model);
+                    this.holder.getAnimator().playAnimation(this.animation, () -> this.animation = null);
+                }
+            }
         }
 
         if (this.holder == null) {
             // get any/first animation
-            this.setModel(PlayerModelRegistry.getModel(PlayerModelRegistry.getAnimations().get(0)));
+            this.setModel(PlayerModelRegistry.getModel(PlayerModelRegistry.getAnimations().getFirst()));
         }
 
         if (tag.contains(PLAYER)) {
             this.playerName = tag.getString(PLAYER).orElseThrow();
-            if (this.getServer() != null) {
+
+            if (this.getServer() != null && StringUtil.isValidPlayerName(this.playerName)) {
                 SkullBlockEntity.fetchGameProfile(this.playerName).thenAccept(gameProfile -> {
-                    gameProfile.ifPresent(profile -> CustomModelDataCache.fetch(profile, dataMap -> {
+                    gameProfile.ifPresent(profile -> TextureCache.fetch(profile, dataMap -> {
                         this.holder.setSkinData(dataMap);
+                        this.holder.setViewRange(0.5f);
                     }));
                 });
+            } else {
+                this.discard();
             }
         }
+
+        tag.getFloat("Yaw").ifPresent(this::setYRot);
     }
 
     @Override
     protected void addAdditionalSaveData(CompoundTag tag) {
-        if (this.playerName != null && !this.playerName.isEmpty()) {
+        if (this.playerName != null && !this.playerName.isBlank()) {
             tag.putString(PLAYER, this.playerName);
         }
 
-        if (!this.animation.isEmpty()) {
+        if (this.animation != null && !this.animation.isBlank()) {
             tag.putString(ANIMATION, this.animation);
         }
+
+        tag.putFloat("Yaw", this.getYRot());
     }
 
     public void setPlayer(ServerPlayer player, Map<MinecraftSkinParser.BodyPart, MinecraftSkinParser.PartData> data) {
@@ -116,6 +133,7 @@ public class PlayerModelEntity extends Entity implements AnimatedEntity {
         }
 
         this.holder.setSkinData(data);
+        this.holder.setViewRange(0.5f);
     }
 
     private void addElement(String name, ItemStack stack, ItemDisplayContext context) {
@@ -161,6 +179,9 @@ public class PlayerModelEntity extends Entity implements AnimatedEntity {
 
     @Override
     public boolean hurtServer(ServerLevel serverLevel, DamageSource damageSource, float f) {
-        return false;
+        if (damageSource.isCreativePlayer())
+            this.kill(serverLevel);
+        return damageSource.isCreativePlayer();
     }
 }
+
